# AutoCarver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: fshader.glsl  icosphere.ply  icosphere.stl  vshader.glsl
res/shaders/: color.frag  color.vert  flat.frag  flat.vert  pure.frag  pure.vert
src/: CMakeLists.txt
src/Core/: EntryPoint.cpp
src/Renderer/: Camera.cpp  Camera.h
src/Widgets/: CameraController.cpp  CameraController.h  SceneViewWidget.cpp  SceneViewWidget.h
src/core/: Debris.cpp  Debris.h  EntryPoint.cpp  Functions.h  NotScene.cpp  NotScene.h  Scene.cpp  Scene.h  SculptProcess.cpp  SculptProcess.h  Sculpture.cpp  Sculpture.h  Timer.cpp  Timer.h
src/fileIO/: DataHandler.cpp  DataHandler.h  FileHandler.cpp  FileHandler.h  MeshHandler.cpp  MeshHandler.h  MeshLoader.cpp  MeshLoader.h  Serializable.cpp  Serializable.h  Serializer.cpp  Serializer.h
src/geometry/: Axis3D.cpp  Axis3D.h  Body.cpp  Body.h  Circle.cpp  Circle.h  Collision.cpp  Collision.h  ConvexHull.cpp  ConvexHull.h  EPA.cpp  EPA.h  FaceArray.cpp  FaceArray.h  GeometryBuilder.cpp  GeometryBuilder.h  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  Octree.cpp  Octree.h  Octree.tpp  Polygon.cpp  Polygon.h  RigidBody.cpp  RigidBody.h  Simplex.cpp  Simplex.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  Tesselation.cpp  Tesselation.h  Transformable.cpp  Transformable.h  Triangle.cpp  Triangle.h  VertexArray.cpp  (+1 more)
src/geometry/collision/: Collision.cpp  Collision.h  Collision.tpp  EPA.cpp  EPA.h  EPA.tpp  Simplex.cpp  Simplex.h
src/geometry/curves/: CubicSpline.cpp  CubicSpline.h  Interpolator.h  PiecewisePolyPath.cpp  PiecewisePolyPath.h
src/geometry/poly/: CompositePolygon.cpp  CompositePolygon.h  ConvexPolygon.cpp  ConvexPolygon.h  Polygon.cpp  Polygon.h  Profile.cpp  Profile.h  SectionOperation.cpp  SectionOperation.h
src/geometry/primitives/: AABB.cpp  AABB.h  Circle.cpp  Circle.h  ConvexHull.cpp  ConvexHull.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/geometry/shape/: AABB.cpp  AABB.h  Circle.cpp  Circle.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/math/: mat4f.cpp  mat4f.h  vec3f.cpp  vec3f.h
src/physics/: Body.cpp  Body.h  CompositeBody.cpp  CompositeBody.h  Constraint.cpp  Constraint.h  RigidBody.cpp  RigidBody.h
src/process/: ProcessConfiguration.cpp  ProcessConfiguration.h  ProcessPlanner.cpp  ProcessPlanner.h  SculptProcess.cpp  SculptProcess.h  Sequence.cpp  Sequence.h
src/renderer/: Camera.cpp  Camera.h  Colors.h  EdgeDetect.cpp  EdgeDetect.h  LineChartWidget.cpp  LineChartWidget.h  MonitorCameraController.cpp  MonitorCameraController.h  PolygonWidget.cpp  PolygonWidget.h  RenderBuffer.cpp  RenderBuffer.h  RenderCapture.cpp  RenderCapture.h  RenderEntity.cpp  RenderEntity.h  RenderGeometry.cpp  RenderGeometry.h  SceneWidget.cpp  SceneWidget.h  UiLoader.cpp  UiLoader.h  VertexArray.cpp  VertexArray.h
src/robot/: ArticulatedWrist.cpp  ArticulatedWrist.h  Joint.cpp  Joint.h  KinematicChain.cpp  KinematicChain.h  Pose.cpp  Pose.h  PrismaticJoint.cpp  PrismaticJoint.h  RevoluteJoint.cpp  RevoluteJoint.h  Robot.cpp  Robot.h
src/robot/planning/: CompositeTrajectory.cpp  CompositeTrajectory.h  CompoundTrajectory.cpp  CompoundTrajectory.h  Interpolator.cpp  Interpolator.h  PathPlanner.cpp  PathPlanner.h  PiecewisePolyPath.cpp  PiecewisePolyPath.h  SimpleTrajectory.cpp  SimpleTrajectory.h  TOPP.cpp  TOPP.h  TOPPTrajectory.cpp  TOPPTrajectory.h  Trajectory.cpp  Trajectory.h  TrajectoryBuilder.cpp  TrajectoryBuilder.h  Waypoint.cpp  Waypoint.h
src/robot/trajectory/: CartesianTrajectory.cpp  CartesianTrajectory.h  CompositeTrajectory.cpp  CompositeTrajectory.h  HoldPosition.cpp  HoldPosition.h  SimpleTrajectory.h  TOPP.h  TOPPTrajectory.cpp  TOPPTrajectory.h  Trajectory.cpp  Trajectory.h  Waypoint.cpp  Waypoint.h
src/widgets/: SceneViewWidget.cpp  SceneViewWidget.h
tests/: CMakeLists.txt
tests/manual/: CMakeLists.txt
tests/manual/collision/: CMakeLists.txt  ControlWidget.cpp  ControlWidget.h  main.cpp
tests/manual/convex-hull/: CMakeLists.txt  main.cpp  main.ui
tests/manual/convex-slice/: CMakeLists.txt  main.cpp  main.ui
tests/manual/mesh-carve-process/: CMakeLists.txt  main.cpp  main.ui
tests/manual/mesh-loading/: CMakeLists.txt  main.cpp
tests/manual/octree/: CMakeLists.txt  main.cpp  main.ui
tests/manual/ortho/: CMakeLists.txt  main.cpp  main.ui
tests/manual/polygon/: CMakeLists.txt  main.cpp  main.ui
tests/manual/polygon-boolean/: CMakeLists.txt  main.cpp  window.cpp  window.h
tests/manual/polygon-tesselation/: CMakeLists.txt  main.cpp  window.cpp  window.h
tests/manual/qmesh-load-format/: CMakeLists.txt  testqmeshload.cpp  testqmeshload.pro
tests/manual/raycast/: CMakeLists.txt  main.cpp  main.ui
tests/manual/robot-motion/: CMakeLists.txt  main.cpp  main.ui
tests/manual/robot-pathing/: CMakeLists.txt  main.cpp  main.ui
tests/manual/sandbox/: CMakeLists.txt  main.cpp  sandbox.cpp
tests/manual/topp/: CMakeLists.txt  main.cpp
